<resources>
    <string name="rs">\u20A8</string>
    <string name="image_description">image_description</string>
    <string name="action_settings">Settings</string>
    <string name="work_email">Work E-mail ID</string>
    <string name="please_updtae">Please update</string>
    <string name="phone">Phone</string>
    <string name="provide_phone">Please provide your Phone Number to proceed with the request</string>
    <string name="submit">SUBMIT</string>
    <string name="verify_top">Verify your account</string>
    <string name="verification_thanks">Congratulations on taking a vital initiative towards your own and your family’s health!</string>
    <string name="verify_email_msg">Would you like to verify your email id now?
We sent you an email on your registered email id with the code to verify your email id. Please enter the code provided in the mail to verify.</string>
    <string name="PASSWORD_VALID_MSG">Password must be between 5 to 20 characters and must have at least 1 special character or a number or a capital letter.</string>
    <string name="verify_thanks">Thanks for showing your interest in Jeevom.Kindly verify your email/phone number.</string>
    <string name="verify_thanks_user_cell_exist">"Please verify your Phone number to continue.</string>
    <string name="verify_thanks_user_email_exist">"Please verify your Email to continue.</string>
    <string name="regenerate_code_text">* If you have not received the code yet, regenerate your code.</string>
    <string name="email_verification">E-mail Verification</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="emailVerificationMessage">We sent you a verification message to your e-mail. Please click the link that you have received in your e-mail.</string>
    <string name="emailText">Enter below the code that is mentioned in your E-mail</string>
    <string name="missedCallText">Give us a missed call on </string>
    <string name="tollFreeNo">1800 700 600</string>
    <string name="tollFreeText"> (tollfree)</string>
    <string name="phoneText">Enter below the code that is received by SMS</string>
    <string name="male">Male</string>
    <string name="femail">Female</string>
    <string name="other">Other</string>
    <string name="email">Email</string>
    <string name="selectArea">Select Area</string>
    <string name="searchWhat">Search What</string>
    <string name="name">Name</string>
    <string name="emailPhone">Email/Phone</string>
    <string name="contact">Contact Number</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="type_healthcare_professional">Type of Healthcare Professional</string>
    <string name="degree">Degree</string>
    <string name="career">Started Career in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Second/Last Name</string>
    <string name="speciality">Speciality</string>
    <string name="reg_number">Registration Number</string>
    <string name="reg_authority">Registration Authority</string>
    <string name="pwd">Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="type_healthcare_facility">Type of Healthcare Facility</string>
    <string name="timings">Timings</string>
    <string name="facility_name">Facility Name</string>
    <string name="address_1">Address Line 1</string>
    <string name="address_2">Address Line 2</string>
    <string name="location">Location</string>
    <string name="city">City</string>
    <string name="owner_details">Owner Details</string>
    <string name="log_in">Log In</string>
    <string name="forget_ur_pwd"><u>Forgot your password ?</u></string>
    <string name="sign_up"><u>New to Jeevom? Signup</u></string>
    <string name="thanks_login">Dear User, Thanks for Login</string>
    <string name="thanks_signup">Welcome to Jeevom</string>
    <string name="stay_tuned">The fun is about to begin....... stay tuned!!! </string>
    <string name="curtain_message_first">We are taking Baby Steps to achieve the Giant Leap. While We are busy fixing
the nuts &amp; bolts of this comprehensive healthcare platform, you are welcome to
Jeevom and become our flagship early adopter.</string>
    <string name="curtain_promise">We promise to enthrall you by the ease, elegance and assortment of
functionalities to take care of your Health, Wellness and Medical needs.</string>
    <string name="signup_dialog_title">Sign Up As </string>
    <string name="signup_free">Signup for free</string>
    <string name="member">Member </string>
    <string name="message">Message </string>
    <string name="subject">Subject</string>
    <string name="message_hint">Enter your message here...</string>
    <string name="subject_hint">Enter your subject here...</string>
    <string name="info_share">Your following information is being shared</string>
    <string name="healthcare_professional">Healthcare Professional</string>
    <string name="facility_provider">Healthcare facility Provider</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="send_message">Email Consultation</string>
    <string name="call_back_request">Call Back request</string>
    <string name="req_book_appoint">Request for book Appointment</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="reason">Reason</string>
    <string name="area">Area</string>
    <string name="age">Age</string>
    <string name="callback_subject">[Jeevom] Request for Call Back</string>
    <string name="req_appoint_subject">Request for Appointment</string>
    <string name="message_subject">[Jeevom] Email Enquiry</string>
    <string name="phone_email_exists">The email id or phone number you entered already exists. Do you want to set your Password?</string>
    <string name="phone_email_exists_note">Note: We use this number only to send you the required details.</string>
    <string name="attention">ATTENTION</string>
    <string name="attention_text">This legal notice applies to the entire contents of the Websites under the domain names Jeevom.com, (the ‘Website’) and to any correspondence by e-mail between us and you. Please read these terms carefully before using the Website. Using the Website indicates that you accept these terms regardless of whether or not you choose to register with us. If you do not accept these terms, do not use the Website. This notice is issued by Jeevom Healthcare Pvt. Ltd.</string>
    <string name="introduction_heading">1. Introduction</string>
    <string name="introduction_first">1.1 By accessing any part of this Website, you shall be deemed to have accepted these terms in full. If you do not accept these terms in full you must leave this Application.</string>
    <string name="introduction_second">1.2 We reserve the right to change these terms at any time without prior notice. You should check this Website regularly to review the terms because they are binding on you. Certain provisions of these terms may be superseded by expressly designated legal notices or terms located on particular pages at this Website.</string>
    <string name="introduction_third">This Website is Copyright © Jeevom Healthcare Pvt. Ltd.</string>
    <string name="website_access">2. Application Access</string>
    <string name="website_access_first">2.1 We do not guarantee that access to this Application will be continuously available and will not be liable if for any reason (including but not limited to) the Application being suspended temporarily and without notice in the case of system failure, maintenance or repair or for reasons beyond the Company\'s control.</string>
    <string name="website_access_second">2.2 We reserve the right to withdraw or restrict access to the Application without notice for any user who is registered with us and/or is deemed to be in breach of these terms.</string>
    <string name="misuse">3. Misuse</string>
    <string name="misuse_first">3.1 You will not use the Application for any purpose that is unlawful or prohibited by these terms.</string>
    <string name="misuse_second">3.2 You must not misuse the Website site by knowingly introducing viruses, trojans or any other material which is malicious or technologically harmful in breach of the Computer Misuse Act 1990.</string>
    <string name="misuse_third">3.3 You must not attempt to gain unauthorised access to the Website, the server on which the Website is stored or any server, computer or database connected to the Website.</string>
    <string name="links">4. Links to Third Party Websites</string>
    <string name="links_first">4.1 The Application  may include links to third party websites that are controlled and maintained by others. Any link to any other website is not an endorsement of such website and the Company accepts no responsibility or liability for any material supplied by or contained on any third party websites linked from or to this website.</string>
    <string name="linking">5. Linking to our Website</string>
    <string name="linking_first">5.1 You may link to our home page, provided you do so in a way that is fair and legal and does not seek to damage our reputation or take undue advantage of it or suggest that any form of association or endorsement exists on our part when this is not the case. We reserve the right to withdraw linking permission without notice.</string>
    <string name="linking_second">This right is subject to the following conditions:</string>
    <string name="linking_a">(a) you must not establish a link from any website that is not operated by you;</string>
    <string name="linking_b">(b) you must not replicate the home page of our Website;</string>
    <string name="linking_c">(c) you do not remove, distort or otherwise alter the size or appearance of the Jeevom logo;</string>
    <string name="linking_d">(d) you do not create a frame or any other browser or border environment around this Website;	</string>
    <string name="linking_e">(e) you do not in any way imply that the Company endorses any products or services other than our own;</string>
    <string name="linking_f">(f) you do not otherwise use any trademarks or material subject to copyright displayed on this Website without our express written permission;</string>
    <string name="linking_g">(g) your website does not contain content that is distasteful, offensive or controversial, infringes any intellectual property rights or other rights of any other person or otherwise does not comply with all applicable laws and regulations.</string>
    <string name="property">6. Intellectual Property Rights</string>
    <string name="property_first">6.1 The Intellectual Property Rights in this Website and the materials on or accessible via it belong to the Company and/or our licensors. The Website and the materials on or accessible via it and the Intellectual Property Rights therein may not be copied, distributed, published, licensed, used or reproduced in any way save to the exception that you are permitted to print and download extracts from the Website for your own use subject to the following conditions:</string>
    <string name="property_first_a">(a) no documents or related graphics on this Website are modified in any way;</string>
    <string name="property_first_b">(b) no graphics on this Website are used out of context or separate from any relevant accompanying text; and</string>
    <string name="property_first_c">(c) any of our copyright and trade mark notices and this permission notice appear in all copies.</string>
    <string name="property_second">6.2 Subject to clause 6.1, no part of this Website may be reproduced then stored in any website or included in any public or private electronic retrieval system or service without our prior written permission.</string>
</resources>